--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "prepublish": "npm run lib",
     "lib": "npm run babel",
-    "babel": "rimraf lib && babel src/ -d lib/",
-    "test": "karma start karma.conf.js",
-    "test-travis": "karma start --browsers Firefox --single-run",
-    "example": "webpack-dev-server --content-base ./example/ --config ./example/webpack.config.js"
+    "babel": "rimraf lib && babel src/ -d lib/"
   },
   "peerDependencies": {
     "react": "^15.5.4",
@@ -37,10 +34,13 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "loglevel": "^1.4.1",
     "react-hot-loader": "^1.3.1",
     "rimraf": "^2.6.1",
     "webpack": "^3.3.0",
-    "webpack-dev-server": "^2.6.0"
+    "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
     "immutable": "^3.8.1",
