update author name

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "fast",
     "animation"
   ],
-  "author": "Alex Curtis",
+  "author": "Hapood Wang",
   "license": "Apache v2.0",
   "bugs": {
     "url": "https://github.com/hapood/react-immutable-treevie/issues"
