--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
   "scripts": {
     "prepublish": "npm run lib",
     "lib": "npm run babel",
-    "babel": "rimraf lib && babel src/ -d lib/"
-  },
-  "peerDependencies": {
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "babel": "rimraf lib && babel src/ -d lib/",
+    "example": "webpack-dev-server --content-base ./example/ --config ./example/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -43,11 +40,11 @@
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
-    "immutable": "^3.8.1",
-    "material-ui": "^0.18.6",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "velocity-react": "^1.3.3"
+    "immutable": ">=3",
+    "material-ui": ">=0.16",
+    "prop-types": ">=15",
+    "react": ">=14",
+    "react-dom": ">=14",
+    "velocity-react": ">=1"
   }
 }
