--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lib": "npm run babel",
     "babel": "rimraf lib && babel src/ -d lib/",
     "start": "node devServer.js",
-    "example": "webpack-dev-server --content-base ./example/ --config ./example/webpack.config.js"
+    "clean": "rimraf dist",
+    "build": "npm run clean &&webpack --colors --config ./example/webpack.config.prod.js"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^2.29.0",
     "loglevel": "^1.4.1",
     "react-hot-loader": "^1.3.1",
     "rimraf": "^2.6.1",
