--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lib": "npm run babel",
     "babel": "rimraf lib && babel src/ -d lib/",
     "example": "node devServer.js",
+    "test": "karma start karma.conf.js",
     "clean": "rimraf dist",
     "build:example": "npm run clean &&webpack --colors --config ./example/webpack.config.prod.js"
   },
@@ -35,17 +36,29 @@
     "babel-loader": "^7.1.1",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "chai": "^4.1.0",
+    "enzyme": "^2.9.1",
     "html-webpack-plugin": "^2.29.0",
+    "istanbul-instrumenter-loader": "^3.0.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
+    "karma-mocha": "^1.3.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.4",
     "loglevel": "^1.4.1",
+    "mocha": "^3.4.2",
+    "react-addons-test-utils": "^15.6.0",
     "react-hot-loader": "^1.3.1",
+    "react-test-renderer": "^15.6.1",
     "rimraf": "^2.6.1",
+    "sinon": "^2.4.1",
     "webpack": "^3.3.0",
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.24.1",
     "immutable": ">=3",
-    "material-ui": ">=0.16",
     "prop-types": ">=15",
     "react": ">=14",
     "react-dom": ">=14",
