--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^1.3.0",
+    "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "karma-sourcemap-loader": "^0.3.7",
+    "karma-verbose-reporter": "^0.0.6",
     "karma-webpack": "^2.0.4",
     "loglevel": "^1.4.1",
     "mocha": "^3.4.2",
