--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "example": "node devServer.js",
     "test": "karma start karma.conf.js",
     "clean": "rimraf dist",
+    "test-travis": "karma start --browsers Firefox --single-run",
     "build:example": "npm run clean &&webpack --colors --config ./example/webpack.config.prod.js"
   },
   "repository": {
@@ -64,6 +65,7 @@
     "prop-types": ">=15",
     "react": ">=14",
     "react-dom": ">=14",
+    "react-immutable-proptypes": "^2.1.0",
     "react-router-dom": "^4.1.2",
     "velocity-react": ">=1"
   }
