--- a/package.json
+++ b/package.json
@@ -33,6 +33,17 @@
     "url": "https://github.com/hapood/react-immutable-treeview/issues"
   },
   "homepage": "https://github.com/hapood/react-immutable-treeview#readme",
+  "peerDependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
+  },
+  "dependencies": {
+    "babel-preset-stage-1": "^6.24.1",
+    "immutable": "^3.8.1",
+    "prop-types": "^15.5.10",
+    "react-immutable-proptypes": "^2.1.0",
+    "velocity-react": "^1.1.4"
+  },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
@@ -55,22 +66,16 @@
     "karma-webpack": "^2.0.4",
     "loglevel": "^1.4.1",
     "mocha": "^3.4.2",
+    "react": "^15.6.1",
     "react-addons-test-utils": "^15.6.0",
+    "react-dom": "^15.6.1",
     "react-hot-loader": "^1.3.1",
+    "react-router-dom": "^4.1.2",
+    "immutable": "^3.8.1",
     "react-test-renderer": "^15.6.1",
     "rimraf": "^2.6.1",
     "sinon": "^2.4.1",
     "webpack": "^3.3.0",
     "webpack-dev-server": "^2.5.1"
-  },
-  "dependencies": {
-    "babel-preset-stage-1": "^6.24.1",
-    "immutable": ">=3",
-    "prop-types": ">=15",
-    "react": ">=14",
-    "react-dom": ">=14",
-    "react-immutable-proptypes": "^2.1.0",
-    "react-router-dom": "^4.1.2",
-    "velocity-react": ">=1"
   }
 }
