--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "example": "node ./example/devServer.js",
-    "build": "npm run build:babel && npm run build:copy-files",
+    "build": "npm run build:babel && npm run build:copy-files && npm run build:es",
+    "build:es": " cross-env BABEL_ENV=es babel ./src/index.js --out-file ./build/index.es.js",
     "build:babel": "cross-env NODE_ENV=release babel ./src --out-dir ./build --ignore spec.js",
     "build:copy-files": "babel-node ./scripts/copy-files.js",
     "build:example": "npm run clean &&webpack --colors --config ./example/webpack.config.prod.js",
@@ -49,11 +50,13 @@
     "babel-loader": "^7.1.1",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "chai": "^4.1.0",
     "cross-env": "^5.0.1",
     "enzyme": "^2.9.1",
     "fs-extra": "^4.0.0",
     "html-webpack-plugin": "^2.29.0",
+    "immutable": "^3.8.1",
     "istanbul-instrumenter-loader": "^3.0.0",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
@@ -70,8 +73,6 @@
     "react-dom": "^15.6.1",
     "react-hot-loader": "^1.3.1",
     "react-router-dom": "^4.1.2",
-    "babel-preset-stage-1": "^6.24.1",
-    "immutable": "^3.8.1",
     "react-test-renderer": "^15.6.1",
     "rimraf": "^2.6.1",
     "sinon": "^2.4.1",
