--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "react-dom": "^15.6.1"
   },
   "dependencies": {
-    "immutable": "^3.8.1",
-    "prop-types": "^15.5.10",
-    "react-immutable-proptypes": "^2.1.0",
-    "velocity-react": "^1.1.4"
+    "immutable": "<= 3.8.1",
+    "prop-types": "<= 15.5.10",
+    "react-immutable-proptypes": "<= 2.1.0",
+    "velocity-react": "<= 1.1.4"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -56,7 +56,6 @@
     "enzyme": "^2.9.1",
     "fs-extra": "^4.0.0",
     "html-webpack-plugin": "^2.29.0",
-    "immutable": "^3.8.1",
     "istanbul-instrumenter-loader": "^3.0.0",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
