--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-immutable-treeview",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "React Tree View Component Accept Immutable.js Data",
   "main": "index.js",
   "scripts": {
@@ -41,10 +41,8 @@
   "dependencies": {
     "immutable": "<= 3.8.1",
     "prop-types": "<= 15.5.10",
-    "react-collapse": "^4.0.3",
     "react-immutable-proptypes": "<= 2.1.0",
-    "react-motion": "^0.5.0",
-    "velocity-react": "<= 1.3.3"
+    "react-motion": "<= 0.5.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
